[package]
name = "webtransport-wasm"
description = "WebTransport WASM bindings"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/webtransport-rs"
license = "MIT"

version = "0.1.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]

[dependencies]
webtransport-generic = { path = "../webtransport-generic", version = "0.6" }

async-trait = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
thiserror = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "WebTransport",
    "WebTransportBidirectionalStream",
    "WebTransportCloseInfo",
    "WebTransportSendStream",
    "WebTransportReceiveStream",
    "WritableStream",
    "WritableStreamDefaultWriter",
]
